      request.
      [Tomaz Muraus, Philipp Strube]

    - Add a new driver for Exoscale (https://www.exoscale.ch/) provider.
      [Tomaz Muraus]

    - Fix a bug in Abiquo driver which caused the driver to fail if the endpoint
      URL didn't start with "/api". (LIBCLOUD-447)

      Reported by Igor Ajdisek.
      [Tomaz Muraus]

  *) Storage

    - Allow user to specify 'Content-Disposition' header in the CloudFiles
      driver by passing 'content_disposition' key in the extra dictionary of
      the upload object methods. (LIBCLOUD-430)
      [Michael Farrell]

Changes with Apache Libcloud 0.14.0-beta3

  *) General

    - If the file exists, read pricing data from ~/.libcloud/pricing.json
      by default. If the file doesn't exist, fall back to the old behavior
      and use pricing data which is bundled with the release.
      [Tomaz Muraus]

    - Add libcloud.pricing.download_pricing_file function for downloading and
      updating the pricing file.
      [Tomaz Muraus]

    - Fix libcloud.utils.py3.urlquote so it works with unicode strings under
      Python 2. (LIBCLOUD-429)
      [Michael Farrell]

  *) Compute

    - Refactor Rackspace driver classes and make them easier to use. Now there
      are two Rackspace provider constants - Provider.RACKSPACE which
      represents new next-gen OpenStack servers and
      Provider.RACKSPACE_FIRST_GEN which represents old first-gen cloud
      servers.

      Note: This change is backward incompatible. For more information on those
      changes and how to update your code, please visit "Upgrade Notes"
      documentation page - http://s.apache.org/lc0140un
      [Tomaz Muraus]

    - Deprecate the following EC2 provider constants: EC2_US_EAST,
      EC2_EU, EC2_EU_WEST, EC2_AP_SOUTHEAST, EC2_AP_NORTHEAST,
      EC2_US_WEST_OREGON, EC2_SA_EAST, EC2_SA_EAST and replace it with a new
      EC2 constant.
      Driver referenced by this new constant now takes a "region" argument which